1.0.10
Issue #1369 wrong validateset on tenant
Issue #1371 missing quotes on volume parameter
Check all countries when determining artifacts to use
Issue #1380 Import-TestToolkitToBcContainer fails when license warning occurs

1.0.9
Fix issue when setting bccontainerhelperconfig.defaultnewcontainerparameters.credential in the same session as using it
Add parameter AllowAppDatabaseWrite to New-BcContainerTenant. Works with generic image 0.1.0.24 or later.
Merge AdditionalParameters and MyScripts with defaultNewContainerParameters config file settings
Add build number for Windows 10 20H2
Do not install the test toolkit before compiling test apps
Add 2 more overrides ImportTestToolkitToBcContainer and GetBcContainerAppInfo
Issue #1359 Allow apps to contain test code (but not for AppSource Apps or PTEs)
Add useGenericImage parameter to run-alpipeline
Issue #1364 country attribute needs to be case insensitive
Add parameter additionalCountries to allow Run-AlPipeline to test additional countries during the pipeline
Issue #1367 - If two processes build the same image at the same time, the second one always rebuilds

1.0.8
Issue #1329 test whether containername is in hsts preload list
Add function Sort-AppFilesByDependencies for sorting an array of app files by dependencies
Sort apps before install in Publish-BcContainerApp
Add PrevousApps, AppSourceCopMandatoryAffixes and AppSourceCopSupportedCountries to Run-AlPipeline
Move decision on whether or not to rebuild image from New-BcContainer to New-BcImage and always call
Add parameter -skipIfImageAlreadyExists to New-BcImage
Issue #1343 Publish-BcContainerApp with ShowMyCode fails if replaceDependencies is not Set
Add parameters appPublisher and language to Install-BcContainerApp
Add parameter appPublisher Sync-BcContainerApp
Issue #1337 Add tenant parameter to Install-TestToolkitToBcContainer
Add parameter description to Run-AlPipeline
Set JUnit as default output from Run-AlPipeline

1.0.7