@@ -3,6 +3,9 @@ Issue #1369 wrong validateset on tenant
 Issue #1371 missing quotes on volume parameter
 Check all countries when determining artifacts to use
 Issue #1380 Import-TestToolkitToBcContainer fails when license warning occurs
+Issue 1377 Sort-AppFoldersByDependencies didn't support empty arrays
+Allow AppFiles to be an empty array in Sort-AppFilesByDependencies
+Allow previousApps to be present locally (not downloaded from http or https)
 
 1.0.9
 Fix issue when setting bccontainerhelperconfig.defaultnewcontainerparameters.credential in the same session as using it
